argocd/vllm/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vllm
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: vmagent
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: open-webui
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vllm
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
